--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -1,4 +1,4 @@
-<h1>Hola mi primer proyecto en Angular</h1>
+<h1>Hello world, this is a course of Angular 17</h1>
 <h2>{{ welcome }}</h2>
 <ul>
     <li *ngFor="let task of tasks">
@@ -6,4 +6,7 @@
     </li>
 </ul>
 <hr />
-<h2></h2>
+<p>My name is {{ name }} and I'm {{ age }}</p>
+<img [src]="img" />
+<button (click)="clickHandler()">Click me</button>
+```
