--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -1,12 +1,17 @@
-<h1>Hello world, this is a course of Angular 17</h1>
-<h2>{{ welcome }}</h2>
-<ul>
-    <li *ngFor="let task of tasks">
-        {{ task }}
-    </li>
-</ul>
-<hr />
-<p>My name is {{ name }} and I'm {{ age }}</p>
-<img [src]="img" />
-<button (click)="clickHandler()">Click me</button>
-```
+<header>
+    <h1>Hello world, this is a course of Angular 17</h1>
+    <h2>{{ welcome }}</h2>
+</header>
+<main>
+    <ul>
+        <li *ngFor="let task of tasks">
+            {{ task }}
+        </li>
+    </ul>
+    <hr />
+    <div>
+        <p>My name is {{ name }} and I'm {{ age }} years old</p>
+        <img [src]="img" />
+    </div>
+    <button (click)="clickHandler()">Click me</button>
+</main>
